spl/tests/compile_fail/bare_op_arg_some.stderr
warning: unused import: `mint`
 --> tests/compile_fail/bare_op_arg_some.rs:3:28
  |
3 | use quasar_spl::accounts::{mint, token};
  |                            ^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0308]: mismatched types
  --> tests/compile_fail/bare_op_arg_some.rs:8:10
   |
 8 | #[derive(Accounts)]
   |          ^^^^^^^^ expected `&AccountView`, found `Option<&AccountView>`
...
13 |     #[account(token(mint = mint, authority = Some(authority)))]
   |                                  --------- arguments to this method are incorrect
   |
   = note: expected reference `&quasar_lang::entrypoint::AccountView`
                   found enum `Option<&quasar_lang::entrypoint::AccountView>`
note: method defined here
  --> src/accounts/token.rs
   |
   |     pub fn authority(mut self, v: &'a AccountView) -> Self {
   |            ^^^^^^^^^
   = note: this error originates in the derive macro `Accounts` (in Nightly builds, run with -Z macro-backtrace for more info)
